--- a/about.html
+++ b/about.html
@@ -2,10 +2,14 @@
 <html>
 	<head>
 		<meta charset="UTF-8">
-		<link rel="stylesheet" href="css/grayscale02.css" />
 		<title>ABOUT</title>
 	</head>
+	<style>
+		body{
+			margin:0px ;
+		}
+	</style>
 	<body>
-		<h1>ABOUT</h1>
+		<img src="img/分工页面.jpg" />
 	</body>
 </html>
