三次修改，版权声明修改

--- a/index.html
+++ b/index.html
@@ -165,7 +165,7 @@
         <div class="container text-center">
             
         </div>
-        <div class="copyright"><p>Copyright &copy;Kboring</p></div>
+        <div class="copyright"><p>Copyright © Your Website 2014</p></div>
     </footer>
 
     <!-- jQuery -->
