meta标签优化修改

--- a/index.html
+++ b/index.html
@@ -6,8 +6,10 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="description" content="">
+    <meta name="description" content="人的一生有很多无聊的时间不能被浪费！这个网站存在的意义就是要和你一起干掉无聊时光发现更多你意想不到的乐趣">
     <meta name="author" content="">
+    <meta http-equiv="window-target"content="_top" /><!--防止别人在框架里调用自己的页面-->
+    <meta name="keywords"content="kboring,boring,干掉无聊，有趣的网站，好玩的网站，interesting，funny，无聊，kill，bored" />
 
     <title>Kboring</title>
 
